# mullvadwaita

./: .gitignore  Cargo.toml  README.md  build.rs  i18n.toml  icons.toml
src/: extensions.rs  macros.rs  main.rs  mullvad.rs  prelude.rs  texts.rs  utils.rs
src/res/: global.css
src/ui/: about.rs  account.rs  app.rs  entry_dialog.rs  extensions.rs  logged_in_view.rs  login_view.rs  main_window.rs  mod.rs  preferences.rs  radio_buttons_list.rs  types.rs  variant_selector.rs  widgets.rs
