[package]
name = "mullvadwaita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", optional = true, package = "libadwaita" }
gtk = { version = "0.9", package = "gtk4" }
relm4 = { version = "0.9", features = ["all", "libadwaita", "gnome_46"] }
relm4-components = "0.9"
relm4-icons = "0.10.0-beta.2"
tracker = "0.2"

futures = "0.3"
futures-util = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "full"] }
log = { version = "0.4", features = ["std", "max_level_trace"] }
env_logger = "0.11"
anyhow = "1"
smart-default = "0.7"
chrono = "0.4"

# Localization
i18n-embed = { version = "0.15", features = [
    "gettext-system",
    "desktop-requester",
] }
i18n-build = "0.10"
lazy_static = "1"
rust-embed = "8"
tr = "0.1"

# mullvad
mullvad-management-interface = { path = "./mullvadvpn-app/mullvad-management-interface" }
mullvad-types = { path = "./mullvadvpn-app/mullvad-types" }
talpid-types = { path = "./mullvadvpn-app/talpid-types" }

[build-dependencies]
relm4-icons-build = "0.10.0-beta.1"
